# EBNF-Compiler

./: .pre-commit-config.yaml  README.md  REUSE.toml  main.py  pyproject.toml
.github/workflows/: release.yml
.reuse/: dep5
docs/: conf.py  index.rst
examples/: basic.ebnf  ebnf.ebnf  oberon0.ebnf
src/ebnf_compiler/: __init__.py  ast.py  parser.py  scanner.py  tokens.py
tests/: test_simple.py
