[project]
name = "ebnf-compiler"
version = "0.1.0"
description = "EBNF Compiler: A tool for parsing and compiling EBNF grammars."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "reuse>=6.2.0",
    "ruff>=0.15.4",
    "sphinx>=9.0.4",
    "sphinx-design>=0.7.0",
]

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[project.scripts]
ebnf-compiler = "ebnf_compiler:app"
